Attemp to fix distorted smart phone landscape view

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -165,6 +165,10 @@ footer {
 
 /* Tablet Styles*/
 @media only screen and (max-width: 1024px) {
+  .site-container {
+    width: 100%;
+  }
+  
   .menu-1024px {
     display: block;
     margin: 0 auto;
@@ -200,7 +204,7 @@ footer {
 
 /*Smart phone Styles*/
 @media only screen and (max-width: 470px) {
-  
+
   /*Universal styles*/
   .site-container {
     width: 100%;
@@ -208,7 +212,6 @@ footer {
 
   /*Heder styles*/
   header {
-    border: 2px solid white;
     justify-content: center;
   }
 
